--- a/src/App.css
+++ b/src/App.css
@@ -2,30 +2,95 @@
   display: flex;
 }
 .body {
+  min-height: 80vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
 .header {
-  padding: 1rem;
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+  padding: 0 0.5rem;
   box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
   margin-bottom: 1rem;
+  height: 4rem;
+}
+input{
+  height: 1.5rem;
+  width: 18rem;
+  border-radius: 5px;
+  padding: 1rem;
+  border: 1px solid black;
 }
 .main {
+  padding: 0 5rem;
   display: flex;
   justify-content: space-between;
 }
+.left{
+  padding: 2rem;
+}
 .aside {
+  padding: 0 1rem;
+  border-left: 1.5px solid black;
   width: 30%;
 }
+.aside div h2{
+  margin-bottom: 0.5rem;
+}
 .footer {
-  padding: 0 1rem;
+  padding: 2rem 7rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 .blog {
-  box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
-  padding: 1rem;
   border-radius: 5px;
+  margin-bottom: 1rem;
+}
+.top{
+  display: flex;
+  align-items: center;
+  gap: 0.6rem;
+}
+img{
+  height: 2.5rem;
+}
+.recommended{
+
+  margin-top: 1rem;
+}
+.recommended div{
+  margin-top: 0.5rem;
+  display: grid;
+  grid-template-columns: auto auto;
+  gap: 1rem;
+}
+.recommended div p{
+  text-align: center;
+  border: 1px solid black;
+  padding: 0.5rem;
+  border-radius: 10px;
+}
+.tofollow{
+  margin-top: 1rem;
+}
+.tofollow .desc{
+  display: flex;
+  gap: 1rem;
+}
+
+.tofollow button{
+  height: 1.5rem;
+  width: 5rem;
+  border-radius: 10px;
+  border: 1px solid black;
+  cursor: pointer;
+}
+.follow p{
+  margin-bottom: 0.5rem;
+}
+.card{
+  margin-bottom: 0.5rem;
 }
