--- a/src/App.css
+++ b/src/App.css
@@ -95,3 +95,20 @@ img{
 .card{
   margin-bottom: 0.5rem;
 }
+@media screen and (max-width: 600px) {
+  .header{
+    display: none;
+  }
+  .main{
+    flex-direction: column;
+    padding: 0;
+  }
+  .aside{
+    width: 100%;
+    border: none;
+    padding: 2rem;
+  }
+  .footer{
+    padding: 2rem;
+  }
+}
