--- a/src/App.css
+++ b/src/App.css
@@ -33,11 +33,16 @@ input{
 }
 .aside {
   padding: 0 1rem;
-  border-left: 1.5px solid black;
+  border-left: 1.5px solid  hsl(180, 14%, 20%);
   width: 30%;
 }
-.aside div h2{
+.aside div h2,h3{
   margin-bottom: 0.5rem;
+  color:  hsl(180, 14%, 20%);
+}
+.aside p{
+  color: hsl(180, 8%, 52%)
+  ;
 }
 .footer {
   padding: 2rem 7rem;
@@ -77,7 +82,7 @@ img{
 }
 .recommended div p{
   text-align: center;
-  border: 1px solid black;
+  border: 1px solid  hsl(180, 14%, 20%);
   padding: 0.5rem;
   border-radius: 10px;
 }
@@ -93,7 +98,7 @@ img{
   height: 1.5rem;
   width: 5rem;
   border-radius: 10px;
-  border: 1px solid black;
+  border: 1px solid  hsl(180, 14%, 20%);
   cursor: pointer;
   text-align: center;
 }
