--- a/src/App.css
+++ b/src/App.css
@@ -121,6 +121,14 @@ a{
 a:hover{
   text-decoration: underline;
 }
+.details{
+  padding: 7rem;
+}
+.details img{
+  width: 100%;
+  height: 20rem !important;
+  border-radius: 0;
+}
 @media screen and (max-width: 600px) {
   .header{
     display: none;
