--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,21 @@
   margin-bottom: 1rem;
   height: 4rem;
 }
-input{
+.home-link {
+  display: flex;
+  align-items: center !important;
+  gap: 0.4rem;
+}
+.home-link a {
+  color: black !important;
+}
+.logo a {
+  color: black;
+}
+.logo a:hover {
+  text-decoration: none;
+}
+input {
   height: 1.5rem;
   width: 18rem;
   border-radius: 5px;
@@ -28,21 +42,21 @@ input{
   display: flex;
   justify-content: space-between;
 }
-.left{
+.left {
   padding: 2rem;
 }
 .aside {
   padding: 0 1rem;
-  border-left: 1.5px solid  hsl(180, 14%, 20%);
+  border-left: 1.5px solid hsl(180, 14%, 20%);
   width: 30%;
 }
-.aside div h2,h3{
+.aside div h2,
+h3 {
   margin-bottom: 0.5rem;
-  color:  hsl(180, 14%, 20%);
+  color: hsl(180, 14%, 20%);
 }
-.aside p{
-  color: hsl(180, 8%, 52%)
-  ;
+.aside p {
+  color: hsl(180, 8%, 52%);
 }
 .footer {
   padding: 2rem 7rem;
@@ -54,95 +68,93 @@ input{
   border-radius: 5px;
   margin-bottom: 1rem;
 }
-.top{
+.top {
   display: flex;
   align-items: center;
   gap: 0.6rem;
 }
-.blog h4{
-  color:   hsl(180, 14%, 20%);
+.blog h4 {
+  color: hsl(180, 14%, 20%);
 }
 .blog p {
-  color: hsl(180, 8%, 52%)
-  ;
+  color: hsl(180, 8%, 52%);
 }
-img{
+img {
   height: 2.9rem;
   border-radius: 50%;
 }
-.recommended{
-
+.recommended {
   margin-top: 1rem;
 }
-.recommended div{
+.recommended div {
   margin-top: 0.5rem;
   display: grid;
   grid-template-columns: auto auto;
   gap: 1rem;
 }
-.recommended div p{
+.recommended div p {
   text-align: center;
-  border: 1px solid  hsl(180, 14%, 20%);
+  border: 1px solid hsl(180, 14%, 20%);
   padding: 0.5rem;
   border-radius: 10px;
 }
-.tofollow{
+.tofollow {
   margin-top: 1rem;
 }
-.tofollow .desc{
+.tofollow .desc {
   display: flex;
   gap: 1rem;
 }
 
-.tofollow button{
+.tofollow button {
   height: 1.5rem;
   width: 5rem;
   border-radius: 10px;
-  border: 1px solid  hsl(180, 14%, 20%);
+  border: 1px solid hsl(180, 14%, 20%);
   cursor: pointer;
   text-align: center;
 }
-.follow p{
+.follow p {
   margin-bottom: 0.5rem;
 }
-.card{
+.card {
   margin-bottom: 0.5rem;
 }
-.title{
+.title {
   color: hsl(180, 29%, 50%);
 }
-.not-found{
+.not-found {
   text-align: center;
 }
-a{
+a {
   text-decoration: none;
   cursor: pointer;
 }
-a:hover{
+a:hover {
   text-decoration: underline;
 }
-.details{
+.details {
   padding: 7rem;
 }
-.details img{
+.details img {
   width: 100%;
   height: 20rem !important;
   border-radius: 0;
 }
 @media screen and (max-width: 600px) {
-  .header{
+  .header {
     display: none;
   }
-  .main{
+  .main {
     flex-direction: column;
     padding: 0;
   }
-  .aside{
+  .aside {
     width: 100%;
     border: none;
     padding: 2rem;
   }
-  .footer{
+  .footer {
     padding: 2rem;
   }
 }
