Update profile uri

--- a/src/App.css
+++ b/src/App.css
@@ -73,6 +73,10 @@ h3 {
   align-items: center;
   gap: 0.6rem;
 }
+.top div img,.desc img{
+  height: 2.5rem;
+  width: 2.5rem;
+}
 .blog h4 {
   color: hsl(180, 14%, 20%);
 }
