--- a/src/App.css
+++ b/src/App.css
@@ -166,6 +166,7 @@ form button{
 }
 form textarea{
   padding: 1rem;
+  border: 1px solid black;
 }
 @media screen and (max-width: 600px) {
   .header {
@@ -181,6 +182,9 @@ form textarea{
     padding: 2rem;
   }
   .footer {
-    padding: 2rem;
+    padding: 1rem;
+  }
+  form{
+    padding: 1rem;
   }
 }
