--- a/src/App.css
+++ b/src/App.css
@@ -8,13 +8,21 @@
   justify-content: space-between;
 }
 .header {
+  padding: 0 1rem ;
   display: flex;
   align-items: center;
+  justify-content: space-between;
   gap: 2rem;
-  padding: 0 0.5rem;
   box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
   margin-bottom: 1rem;
   height: 4rem;
+}
+.header-left,.header-right{
+  display: flex;
+  gap: 1.5rem;
+}
+.header-right img{
+  height: 2.3rem;
 }
 .home-link {
   display: flex;
@@ -30,8 +38,10 @@
 .logo a:hover {
   text-decoration: none;
 }
+.header input{
+  height: 1rem !important;
+}
 input {
-  height: 1.5rem;
   width: 18rem;
   border-radius: 5px;
   padding: 1rem;
@@ -111,9 +121,9 @@ img {
 }
 
 .tofollow button {
-  height: 1.5rem;
+  height: 1.7rem;
   width: 5rem;
-  border-radius: 10px;
+  border-radius: 7px;
   border: 1px solid hsl(180, 14%, 20%);
   cursor: pointer;
   text-align: center;
